# branchless-benchmark

./: CMakeLists.txt  README.md  specs.txt  tests-execution.txt
Source/: branched.cpp  branched.h  branchless.cpp  branchless.h  main.cpp
Tests/: branched.cpp  test.cpp
src/: main.cpp
src/comparason/: CMakeLists.txt  branched.h  branchless.h
